--- a/Frontend/src/app/modules/collection/cards/cards.component.html
+++ b/Frontend/src/app/modules/collection/cards/cards.component.html
@@ -11,7 +11,7 @@
   </button>
   <button type="button" mat-icon-button matTooltip="Create wantlist" (click)="createWantlist()">
     <mat-icon>
-      cancel
+      assignment_turned_in
     </mat-icon>
   </button>
 </app-toolbar>
