Working on create wantlist for set

--- a/Frontend/src/app/modules/collection/cards/cards-table/cards-table.component.html
+++ b/Frontend/src/app/modules/collection/cards/cards-table/cards-table.component.html
@@ -7,7 +7,7 @@
             MTG Set - {{setData?.name}}
           </div>
           <div>
-            123 / {{setData?.cardCount}} cards
+            {{setStats?.differentOwned}} / {{setData?.cardCount}} cards
           </div>
         </div>
       </mat-card-title>
